--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ nav {
 }
 
 main {
-    background: url('imagens/predio1.jpg') no-repeat center center;
+    background: url('https://unsplash.com/pt-br/fotografias/w3eFhqXjkZE') no-repeat center center;
     background-size: cover;
     height: 92vh;
 }
